# gpui-react

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  ROADMAP.md  justfile  multi-agent-research-system.md  package.json  prettier.config.js  tsconfig.dist.json  tsconfig.json
.sisyphus/: boulder.json
demo/: app.tsx  canvas-app.tsx  canvas-command-app.tsx  canvas-command-index.ts  canvas-debug-app.tsx  canvas-debug-index.ts  canvas-draw-app.tsx  canvas-draw-index.ts  canvas-index.ts  canvas-reference.html  canvas-simple-app.tsx  canvas-simple-index.ts  css-test.html  css-test.tsx  div-test.tsx  drawing-board-app.tsx  drawing-board-index.ts  elements-app.tsx  elements-index.ts  event-app.tsx  event-index.ts  flex-app.tsx  flex-index.ts  focus-index.ts  focus-test.tsx  image-app.tsx  index.ts  styled-app.tsx  styled-index.ts  test-basic-index.ts  test-ffi.ts  (+2 more)
rust/: Cargo.toml  rustfmt.toml
rust/src/: AGENTS.md  app.rs  batch-updates.rs  batch_updates.rs  element.rs  element_store.rs  elements.rs  event_types.rs  ffi_helpers.rs  ffi_types.rs  focus.rs  global_state.rs  host_command.rs  hover.rs  lib.rs  logging.rs  renderer.rs  window.rs  window_state.rs
rust/src/element/: canvas.rs  div.rs  events.rs  hover.rs  img.rs  input_element.rs  mod.rs  span.rs  text.rs
rust/src/element/input/: blink_cursor.rs  change.rs  cursor.rs  cursor_tests.rs  display_point.rs  handler.rs  indent.rs  input.rs  mod.rs  mode.rs  movement.rs  rope_ext.rs  selection.rs  state.rs  text_content.rs  text_wrapper.rs
(+61 files in other folders)
