[package]
name = "gpui-renderer"
version = "0.1.5"
edition = "2021"

[lib]
name = "gpui_renderer"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
gpui = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
log = "0.4"
logforth = "0.18"
async-channel = "2.3"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
