[package]
name = "gpui-renderer"
version = "0.1.10"
edition = "2024"

[lib]
name = "gpui_renderer"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "codegen"
path = "src/bin/codegen.rs"

[dependencies]
gpui = "0.2.2"
gpui-macros = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
log = "0.4"
logforth = "0.18"
async-channel = "2.3"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time"] }
unicode-segmentation = "1.11"
